@@ -43,6 +43,7 @@ class PointSlopeInteractiveEquationNode extends PhetPNode {
     private static final NumberFormat FORMAT = new DefaultDecimalFormat( "0" );
 
     private final Property<Double> rise, run, x1, y1; // internal properties that are connected to spinners
+    private boolean updatingControls; // flag that allows us to update all controls atomically when the model changes
 
     public PointSlopeInteractiveEquationNode( final Property<StraightLine> interactiveLine,
                                               Property<DoubleRange> riseRange,
@@ -158,7 +159,9 @@ class PointSlopeInteractiveEquationNode extends PhetPNode {
         // sync the model with the controls
         RichSimpleObserver lineUpdater = new RichSimpleObserver() {
             @Override public void update() {
-                interactiveLine.set( new StraightLine( rise.get(), run.get(), x1.get(), y1.get(), interactiveLine.get().color ) );
+                if ( !updatingControls ) {
+                    interactiveLine.set( new StraightLine( rise.get(), run.get(), x1.get(), y1.get(), interactiveLine.get().color ) );
+                }
             }
         };
         lineUpdater.observe( rise, run, x1, y1 );
@@ -166,10 +169,14 @@ class PointSlopeInteractiveEquationNode extends PhetPNode {
         // sync the controls with the model
         interactiveLine.addObserver( new VoidFunction1<StraightLine>() {
             public void apply( StraightLine line ) {
-                rise.set( line.rise );
-                run.set( line.run );
-                x1.set( line.x1 );
-                y1.set( line.y1 );
+                updatingControls = true;
+                {
+                    rise.set( line.rise );
+                    run.set( line.run );
+                    x1.set( line.x1 );
+                    y1.set( line.y1 );
+                }
+                updatingControls = false;
             }
         } );
     }
